[package]
name = "asset_preview"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
base64 = "0.22.1"
dotenv = "0.15.0"
image = "0.25.9"
macroquad = "0.4.14"
png = "0.18.0"
rouille = "3.6.2"
sqlx = { version = "0.8", features = [ "runtime-async-std", "mysql" ] }
tobj = "4.0.3"
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5", features = ["serde"] }
